--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p{
     line-height: 25px;
     font-weight: 500;
 }
-.Orange-view{
+.indigo-view{
     color: indigo;
 }
 .half-width{
@@ -35,12 +35,107 @@ p{
 section{
     height: 500px;
 }
-a{
+.b1{
    text-decoration: none; 
    color: aliceblue;
-   background-image: linear-gradient(indigo,rgb(63, 30, 82));
-   padding: 10px 30px;
+   background-image: linear-gradient(rgb(121, 28, 187),rgb(63, 30, 82));
+   padding: 10px 40px;
    border-radius: 10px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
-   font-weight: 600;
+   font-weight: 500;
+}
+h2{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.short-link{
+    margin-top: 60px;
+    
+
+}
+#margine-to-space{
+    margin-top: 150px;
+    text-align: center;
+    background-color: rgb(244, 233, 253);
+    padding-top: 40px;
+    padding-bottom: 130px;
+}
+
+.threeimage img{
+    width: 100%;
+    margin-left: %;
+    margin-right: 1%;
+
+
+}
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+.column {
+    float: left;
+    width: 25%;
+    padding: 5px;
+    background-color: aliceblue;
+    margin-left: 85px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 30px rgba(90, 90, 90, 0.397) ;
+  }
+
+h3{
+    font-size: 25px;
+    color: rgb(92, 29, 151);
+}
+.threeimage p{
+    text-align: center;
+    margin: 10px 10px;
+}
+#lastbg{
+    padding: 50px 50px;
+}
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+.center img{
+    width: 100%;
+}
+.Inline-h2{
+    text-align: center;
+    padding: 20px 10px;
+    width: 100%;
+    position: relative;
+    margin-top: -220px;
+    margin-left: -100px;
+}
+.Inline-h2 h2{
+    color: beige;
+}
+.inline-link{
+    position: absolute;
+    left: 80%;
+    top: 38%;
+}
+
+h4{
+    font-size: 30px;
+    text-transform: uppercase;
+    text-align: center;
+}
+.clm{
+    padding: 5px;
+}
+.table img{
+    width: 10%;
+}
+.table{
+    text-align: center;
+}
+#footer{
+    text-align: center;
 }
